# Crypto-trading-platform

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  hyperliquid-rest-client.http  readme.md  rest-client.http  tables.sql
backup/: connection_manager.rs  pool_manager.rs
backup/v1/: config.rs  main.rs  price_calculator.rs  routes.rs  service.rs  websocket_message_handler.rs
backup/v1/connection_pool/: client_session_manager.rs  config.rs  connection_pool.rs  mod.rs  pooled_connection_manager.rs
backup/v1/subscriptions/: mod.rs  subscription_manager.rs  subscription_state_manager.rs  subscription_worker.rs
hyperliquid-api/: Cargo.toml
hyperliquid-api/src/: handlers.rs  main.rs
hyperliquid-common/: Cargo.toml  build.rs
hyperliquid-common/proto/: wallet.proto
hyperliquid-common/src/: assets.rs  client.rs  errors.rs  lib.rs  models.rs  types.rs
hyperliquid-wallet/: Cargo.toml
hyperliquid-wallet/src/: main.rs  service.rs
run/: Cargo.toml
run/src/: main.rs
test_pattern_discovery/: Cargo.toml
test_pattern_discovery/src/: final_test.rs  main.rs  test_all_tokens.rs  test_buy_fixed.rs
trading-api/: Cargo.toml
trading-api/src/: main.rs  routes.rs
trading-bot/: Cargo.toml
trading-bot/src/: event_system.rs  main.rs  server_wallet_manager.rs  trading.rs  wallet_monitor.rs
trading-common/: Cargo.toml  build.rs
trading-common/proto/: wallet.proto
trading-common/src/: connection_monitor.rs  constants.rs  database.rs  error.rs  lib.rs  middleware.rs  models.rs  proto.rs  pump_fun.rs  redis_connection.rs  utils.rs  validation.rs
trading-common/src/events/: event_system.rs
trading-common/src/jupiter/: buy.rs  client.rs  constants.rs  mod.rs  sell.rs  swap.rs  transaction.rs  types.rs  utils.rs
trading-common/src/pumpdotfun/: buy.rs  constants.rs  mod.rs  models.rs  sell.rs  transaction.rs  types.rs  utils.rs
trading-common/src/raydium/: buy.rs  constants.rs  layouts.rs  mod.rs  sell.rs  transaction.rs  types.rs  utils.rs
trading-common/src/redis/: cache.rs  connection.rs  mod.rs  pubsub.rs  repomix-output.xml
trading-common/src/serde_helpers/: mod.rs
trading-common/src/utils/: copy_trade.rs  data.rs  dex.rs  transaction.rs
trading-common/src/wallet/: server_wallet_client.rs  server_wallet_manager.rs
trading-common/src/wallet_client/: mod.rs
trading-common/src/websocket/: connection_manager.rs  mod.rs  websocket_server.rs
trading-price-feed/: Cargo.toml  README_VAULT_MONITORING.md
trading-price-feed/src/: cache.rs  config.rs  gateway.rs  main.rs  main_old.rs  pool_monitor.rs  pool_monitor_websocket.rs  price_calculator.rs  routes.rs  service.rs
trading-price-feed/src/actors/: client.rs  coordinator.rs  mod.rs  pool.rs  pool_v2.rs
trading-price-feed/src/messages/: mod.rs
trading-price-feed/src/models/: mod.rs
trading-price-feed/src/raydium/: mod.rs  pool.rs  pool_finder.rs  simple_pool.rs  types.rs
trading-price-feed/src/vault_monitor/: connection_manager.rs  mod.rs  price_calculator.rs  subscription_manager.rs  vault_subscriber.rs
trading-sol-price-feed/: Cargo.toml
trading-sol-price-feed/src/: main.rs  price_monitor.rs  raydium.rs  routes.rs  service.rs
trading-wallet/: Cargo.toml
trading-wallet/src/: main.rs  wallet_service.rs
