[workspace]
members = [
    "trading-common",
    "trading-api",
    "trading-bot",
    "trading-wallet",
    "trading-price-feed",
]
resolver = "2"
[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tokio-stream = "0.1.17"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
postgrest = "1.6.0"
axum = { version = "0.8.1", features = [ "macros"] }
dotenv = "0.15.0"
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.9"
cargo-watch = "8.5.3"
base58 = "0.2.0"
base64 = "0.22.1"
arrayref = "0.3.9"
futures-util = "0.3.31"
solana-sdk = "2.1.7"
solana-client = "2.1.7"
solana-account-decoder = "2.1.7"
solana-program = "2.1.7"
spl-token = "7.0.0"
surf = "2.3.2"
once_cell = "1.20.2"
spl-associated-token-account = "6.0.0"
arc-swap = "1.7.1"
solana-transaction-status = "2.1.7"
borsh = "1.5.3"
bs58 = "0.5.1"
parking_lot = "0.12.3"
bytemuck = { version = "1.21.0", features = ["derive"] }
scopeguard = "1.2.0"
backoff = "0.4.0"
tokio-native-tls = "0.3.1"
reqwest = { version = "0.12.12", features = ["json"] }
redis = { version = "0.28.0", features = ["tokio-comp", "connection-manager", "aio"] }
tonic = { version = "0.12.3", features = ["transport"] }
prost = "0.13.4"
tower-http = { version = "0.6.2", features = ["cors"] }
bincode = "1.3.3"
rust_decimal = "1.36.0"