[workspace]
members = [
    "trading-common",
    "trading-api",
    "trading-bot",
    "trading-wallet",
    "trading-price-feed",
    "trading-sol-price-feed",
]
resolver = "2"
[workspace.dependencies]
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tokio-stream = "0.1.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
postgrest = "1.6.0"
axum = { version = "0.8.4", features = ["macros", "ws"] }
dotenv = "0.15.0"
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
cargo-watch = "8.5.3"
base58 = "0.2.0"
base64 = "0.22.1"
arrayref = "0.3.9"
futures-util = "0.3.31"
solana-sdk = "2.3.1"
solana-client = "2.3.3"
solana-account-decoder = "2.3.3"
solana-program = "2.3.0"
spl-token = "8.0.0"
surf = "2.3.2"
once_cell = "1.21.3"
spl-associated-token-account = "7.0.0"
arc-swap = "1.7.1"
solana-transaction-status = "2.3.3"
borsh = "1.5.7"
bs58 = "0.5.1"
# parking_lot = "0.12.3" # REMOVED - using tokio::sync instead
bytemuck = { version = "1.23.1", features = ["derive"] }
scopeguard = "1.2.0"
backoff = "0.4.0"
tokio-native-tls = "0.3.1"
reqwest = { version = "0.12.22", features = ["json"] }
redis = { version = "0.32.3", features = [
    "tokio-comp",
    "connection-manager",
    "aio",
] }
tonic = { version = "0.13.1", features = ["transport"] }
prost = "0.13.5"
tower-http = { version = "0.6.6", features = ["cors"] }
bincode = "2.0.1"
rust_decimal = "1.37.2"
hex = "0.4.3"
validator = { version = "0.20.0", features = ["derive"] }
tower = "0.5.2"
