[package]
name = "hyperliquid-api"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperliquid-common = { path = "../hyperliquid-common" }
trading-common = { path = "../trading-common" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
redis = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
validator = { workspace = true }
rust_decimal = { workspace = true }