[package]
name = "test_pattern_discovery"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_pattern_discovery"
path = "src/main.rs"

[[bin]]
name = "test_buy_fixed"
path = "src/test_buy_fixed.rs"

[[bin]]
name = "test_all_tokens"
path = "src/test_all_tokens.rs"

[[bin]]
name = "final_test"
path = "src/final_test.rs"

[dependencies]
tokio = { workspace = true }
trading-common = { path = "../trading-common" }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }