[package]
name = "trading-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
trading-common = { path = "../trading-common" }
arc-swap = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }