[package]
name = "trading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
trading-common = { path = "../trading-common" }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base58 = { workspace = true }
arrayref = { workspace = true }
spl-token = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
base64 = { workspace = true }
surf = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
spl-associated-token-account = { workspace = true }
solana-transaction-status = { workspace = true }
parking_lot = { workspace = true }