[package]
name = "trading-common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
postgrest = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
cargo-watch = { workspace = true }
base58 = { workspace = true }
base64 = { workspace = true }
spl-token = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-account-decoder = { workspace = true }
surf = { workspace = true }
once_cell = { workspace = true }
futures-util = { workspace = true }
spl-associated-token-account = { workspace = true }




