[package]
name = "trading-common"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
postgrest = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
base58 = { workspace = true }
base64 = { workspace = true }
spl-token = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-account-decoder = { workspace = true }
surf = { workspace = true }
once_cell = { workspace = true }
futures-util = { workspace = true }
spl-associated-token-account = { workspace = true }
solana-transaction-status = { workspace = true }
borsh = { workspace = true }
bs58 = { workspace = true }
bytemuck = { workspace = true }
tokio-tungstenite = { workspace = true }
backoff = { workspace = true }
tokio-native-tls = { workspace = true }
redis = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = "0.12.3"