[package]
name = "trading-price-feed"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
trading-common = { path = "../trading-common" }
futures-util = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-account-decoder = { workspace = true }
spl-token = { workspace = true }
redis = { workspace = true }
borsh = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
backoff = { workspace = true }
tokio-tungstenite = { workspace = true }
base64 = { workspace = true }