[package]
name = "trading-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tonic = "0.12.3"  # gRPC framework
prost = "0.13.4"  # Protocol buffers
anyhow = { workspace = true }
tracing = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
trading-common = { path = "../trading-common" }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tokio-stream = { workspace = true }
dotenv = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }


