[package]
name = "trading-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tonic = "0.13.1"                                                      # gRPC framework
prost = "0.14.1"                                                      # Protocol buffers
anyhow = { workspace = true }
tracing = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
trading-common = { path = "../trading-common" }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tokio-stream = { workspace = true }
dotenv = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
